:sparkles: :bento: :recycle:  Changed private key converter utils